--- a/app/assets/stylesheets/global/mainnavigation.css
+++ b/app/assets/stylesheets/global/mainnavigation.css
@@ -1,3 +1,83 @@
+/* Notifications */
+
+#notifications {
+	width: 200px;
+	position: absolute;
+	float: right;
+	clear: both;
+	right: 3em;
+	margin-top: 1em;
+}
+
+#notifications-count {
+	font-weight: bold;
+	font-size: 0.8em;
+	background: #00A3FF;
+	color: white;	
+	left: -0.3em;
+  position: absolute;
+  top: -0.3em;
+	width: 15px;
+	height: 15px;
+	text-align: center;
+}
+#notification-panel {
+	display: none;
+	position: relative;
+	z-index:99;
+	right: 0.5em;
+	top: 2px;
+}
+
+#notification-icon {
+	background: green;
+	width: 15px;
+	height: 15px;
+	padding: 0.5em;
+	cursor: pointer;
+}
+
+#notification-icon:hover {
+	background: #129B12;
+}
+
+#notification-list {
+	width: 350px;
+	text-align: left;
+	position: relative;
+	font-size: 0.9em;
+	right: 25em;
+}
+
+#notification-list li {
+	padding: 0.3em;
+}
+
+#notification-list li:hover {
+}
+#notification-list .read a {
+	color: grey;
+}
+
+#notification-list li img {
+	float:left;
+	margin-right: 0.5em;
+}
+
+#notification-list .divider {
+	margin-bottom: 0;
+}
+
+#notification-arrow {
+	position:relative;
+	left: 0.3em;
+	top: 2px;
+}
+
+#notification-arrow .arrow-up {
+	border-bottom:10px solid #B8C2B3;
+}
+
 /* Mainnavigation */
 
 #mainnavigation {
