group mailer polishing

--- a/app/views/group_mailer/invitation.en.html.erb
+++ b/app/views/group_mailer/invitation.en.html.erb
@@ -1,6 +1,6 @@
-Hello <%= @g.user.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.group.owner.login %> has invited you to join the group '<%= @g.group.title %>'.
+<%= @sender.login %> has invited you to join the group '<%= @g.group.title %>'.
 <br />
 <br />
 You can accept the invitation here:<br />
