--- a/app/views/group_mailer/invitation_aborted.en.html.erb
+++ b/app/views/group_mailer/invitation_aborted.en.html.erb
@@ -1,5 +1,5 @@
-Hello <%= @g.group.owner.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.user.login %> has declined your invitation to join the group '<%= @g.group.title %>'.
+<%= @sender.login %> has declined your invitation to join the group '<%= @g.group.title %>'.
 <br />
 <br />
