--- a/app/views/group_mailer/participation_accepted.de.html.erb
+++ b/app/views/group_mailer/participation_accepted.de.html.erb
@@ -1,5 +1,5 @@
-Hallo <%= @g.user.login %>,
+Hallo <%= @receiver.login %>,
 <br />
-<%= @g.group.owner.login %> hat deine Anfrage zur Teilnahme zur Gruppe '<%= @g.group.title %>' akzeptiert.
+<%= @sender.login %> hat deine Anfrage zur Teilnahme zur Gruppe '<%= @g.group.title %>' akzeptiert.
 <br />
 <br />
