--- a/app/views/group_mailer/participation_accepted.en.html.erb
+++ b/app/views/group_mailer/participation_accepted.en.html.erb
@@ -1,5 +1,5 @@
-Hello <%= @g.user.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.group.owner.login %> has accepted your request to join the group '<%= @g.group.title %>'.
+<%= @sender.login %> has accepted your request to join the group '<%= @g.group.title %>'.
 <br />
 <br />
