--- a/app/views/group_mailer/participation_request.de.html.erb
+++ b/app/views/group_mailer/participation_request.de.html.erb
@@ -1,6 +1,6 @@
-Hallo <%= @g.group.owner.login %>,
+Hallo <%= @receiver.login %>,
 <br />
-<%= @g.user.login %> möchte deiner Gruppe '<%= @g.group.title %>' beitreten.
+<%= @sender.login %> möchte deiner Gruppe '<%= @g.group.title %>' beitreten.
 <br />
 <br />
 Du kannst die Anfrage hier akzeptieren:<br />
