--- a/app/views/group_mailer/participation_request.en.html.erb
+++ b/app/views/group_mailer/participation_request.en.html.erb
@@ -1,6 +1,6 @@
-Hello <%= @g.group.owner.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.user.login %> wants to join your group '<%= @g.group.title %>'.
+<%= @sender.login %> wants to join your group '<%= @g.group.title %>'.
 <br />
 <br />
 You can accept the request here:<br />
