--- a/app/views/group_mailer/quit_membership.de.html.erb
+++ b/app/views/group_mailer/quit_membership.de.html.erb
@@ -1,5 +1,5 @@
-Hallo <%= @g.group.owner.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.user.login %> ist aus der Gruppe '<%= @g.group.title %>' ausgetreten.
+<%= @sender.login %> ist aus der Gruppe '<%= @g.group.title %>' ausgetreten.
 <br />
 <br />
