--- a/app/views/group_mailer/quit_membership.en.html.erb
+++ b/app/views/group_mailer/quit_membership.en.html.erb
@@ -1,5 +1,5 @@
-Hello <%= @g.group.owner.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.user.login %> has left the group '<%= @g.group.title %>'.
+<%= @sender.login %> has left the group '<%= @g.group.title %>'.
 <br />
 <br />
