--- a/app/views/group_mailer/quit_membership_by_owner.de.html.erb
+++ b/app/views/group_mailer/quit_membership_by_owner.de.html.erb
@@ -1,4 +1,4 @@
-Hallo <%= @g.user.login %>,
+Hallo <%= @sender.login %>,
 <br />
 Du bist nicht mehr Mitglied der Gruppe '<%= @g.group.title %>'.
 <br />
