--- a/app/views/group_mailer/invitation.de.html.erb
+++ b/app/views/group_mailer/invitation.de.html.erb
@@ -1,6 +1,6 @@
-Hallo <%= @g.user.login %>,
+Hallo <%= @receiver.login %>,
 <br />
-<%= @g.group.owner.login %> hat dich eingeladen der Gruppe '<%= @g.group.title %>' beizutreten.
+<%= @sender.login %> hat dich eingeladen der Gruppe '<%= @g.group.title %>' beizutreten.
 <br />
 <br />
 Du kannst die Einladung hier akzeptieren:<br />
