--- a/app/views/group_mailer/invitation_aborted.de.html.erb
+++ b/app/views/group_mailer/invitation_aborted.de.html.erb
@@ -1,5 +1,5 @@
-Hallo <%= @g.group.owner.login %>,
+Hallo <%= @receiver.login %>,
 <br />
-<%= @g.user.login %> hat deine Einladung zur Teilnahme der Gruppe '<%= @g.group.title %>' abgelehnt.
+<%= @sender.login %> hat deine Einladung zur Teilnahme der Gruppe '<%= @g.group.title %>' abgelehnt.
 <br />
 <br />
