--- a/app/views/group_mailer/participation_aborted.de.html.erb
+++ b/app/views/group_mailer/participation_aborted.de.html.erb
@@ -1,5 +1,5 @@
-Hallo <%= @g.user.login %>,
+Hallo <%= @receiver.login %>,
 <br />
-<%= @g.group.owner.login %> hat deine Anfrage zur Teilnahme zur Gruppe '<%= @g.group.title %>' abgelehnt.
+<%= @sender.login %> hat die Anfrage zur Teilnahme zur Gruppe '<%= @g.group.title %>' abgebrochen.
 <br />
 <br />
