--- a/app/views/group_mailer/participation_aborted.en.html.erb
+++ b/app/views/group_mailer/participation_aborted.en.html.erb
@@ -1,5 +1,5 @@
-Hello <%= @g.user.login %>,
+Hello <%= @receiver.login %>,
 <br />
-<%= @g.group.owner.login %> has declined your request to join the group '<%= @g.group.title %>'.
+<%= @sender.login %> has aborted the request to join the group '<%= @g.group.title %>'.
 <br />
 <br />
