--- a/app/views/group_mailer/quit_membership_by_owner.en.html.erb
+++ b/app/views/group_mailer/quit_membership_by_owner.en.html.erb
@@ -1,4 +1,4 @@
-Hello <%= @g.user.login %>,
+Hello <%= @receiver.login %>,
 <br />
 You are not a member of the group '<%= @g.group.title %>' anymore.
 <br />
