--- a/app/views/meetups/_usermenu.html.erb
+++ b/app/views/meetups/_usermenu.html.erb
@@ -9,5 +9,7 @@
 		</li>
 
   <% end %>
-	<%= @acceptlink %>
+	<% if @acceptlink %>
+		<li class="button"><%= @acceptlink %></li>
+  <% end %>
 </ul>
