--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,9 +1,10 @@
 <div class="list-item <%=h item.itemtype.downcase if item.item_type_id? %> <%=h is_need?(item) %> ui-corner-all"> 
 	<%= render :partial => "share/list-item/usermenu", :locals => {:model => item} if logged_in? and item.owner == current_user %>
-  <div class="item-type">
-    <%= image_tag "icons/icon_#{item.itemtype.downcase}.png", :title => item.localized_itemtype.html_safe, :alt => item.localized_itemtype.html_safe %>
+  <div class="item-type font-smaller">
+		<%= t("#{item.itemtype.downcase}.singular") %>    
+		<%= image_tag "icons/icon_#{item.itemtype.downcase}.png", :title => item.localized_itemtype.html_safe, :alt => item.localized_itemtype.html_safe %>
   </div>
-  <div class="item-status">
+  <div class="item-status ui-corner-all">
     <%= render :partial => "items/itemstatus", :locals => { :item => item } %>    
   </div>
   <p class="font-small"><%= link_to shorten(item.title, 18), item, :title => item.title  if item.title %></p>
@@ -18,6 +19,8 @@
   <% end %>
     <div class="item-bottom">
       <span class="left"><%= link_to_unless_current image_tag(microThumb(item.owner), :title => item.owner.login), item.owner %></span>
-      <span class="date right"><%= distance_of_time_in_words(item.created_at, Time.now) %> <%= t("ago") %></span>
+			<!--      
+				<span class="date right"><%= distance_of_time_in_words(item.created_at, Time.now) %> <%= t("ago") %></span>
+			-->
     </div>
 </div>
