itemstatus link added

--- a/app/assets/stylesheets/global/lists.css
+++ b/app/assets/stylesheets/global/lists.css
@@ -21,6 +21,9 @@
 		color: white;
 		text-align: center;
 }
+.list-item .item-status a {
+		color: white;
+}
 .offers .item-status {
 	background: #62B462;
 }
