--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -9,7 +9,7 @@
 
 <% if @event.description %>
   <p>
-    <%= auto_link_urls(@event.description) %>
+    <%= markdown(@event.description) %>
   </p>
 <% end %>
 <p>
