--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -3,14 +3,14 @@
   <div class="item-members-count font-smaller">
     <%= image_tag "icons/icon_group.png", :alt => "#{group.title} (#{group.members.size})", :title => "#{group.title} (#{group.members.size})" %> (<%= group.members.size %>)
   </div>
-  <p class="font-small"><%= link_to shorten(group.title, 18), group, :title => group.title  if group.title %></p>
+  <p class="font-small"><%= link_to shorten_text_cleaned(group.title, 18), group, :title => group.title  if group.title %></p>
   <% if group.images.first %>
     <div class="image-big ui-corner-all">
       <%= link_to image_tag(group.images.first.image.url(:small)), group, :title => group.title, :class => "ui-corner-all" %>
     </div>
   <% else %>
     <div class="details">
-      <p class="font-small"><%=h shorten(group.description) if group.description %></p>
+      <p class="font-small"><%=h shorten_text_cleaned(group.description) if group.description %></p>
     </div>
   <% end %>
     <div class="item-bottom">
