--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -7,14 +7,14 @@
   <div class="item-status ui-corner-all">
     <%= render :partial => "items/itemstatus", :locals => { :item => item } %>    
   </div>
-  <p class="font-small"><%= link_to shorten(item.title, 18), item, :title => item.title  if item.title %></p>
+  <p class="font-small"><%= link_to shorten_text_cleaned(item.title, 18), item, :title => item.title  if item.title %></p>
   <% if item.images.first %>
     <div class="details image-big ui-corner-all">
       <%= link_to image_tag(item.images.first.image.url(:small)), item, :title => item.title, :class => "ui-corner-all" %>
     </div>
   <% else %>
     <div class="details">
-      <p class="font-small"><%= link_to shorten(item.description), item, :title => item.title if item.description %></p>
+      <p class="font-small"><%= link_to shorten_text_cleaned(item.description), item, :title => item.title if item.description %></p>
     </div>
   <% end %>
     <div class="item-bottom">
