--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% else %>
     <div class="details">
-      <p class="font-small"><%=h shorten_text_cleaned(group.description) if group.description %></p>
+      <p class="font-small"><%= link_to shorten_text_cleaned(group.description), group, :title => group.title if group.description %></p>
     </div>
   <% end %>
     <div class="item-bottom">
