--- a/app/views/layouts/userarea.html.erb
+++ b/app/views/layouts/userarea.html.erb
@@ -1,6 +1,6 @@
 <div class="sub2cols">
   <div id="userdescription" class="subcol1">
-    <%= render :partial => "share/avatar", :locals => {:user => @user} %>
+    <%= render :partial => "share/avatar", :locals => {:model => @user} %>
     <%= render :partial => "share/userarea/usermenu", :locals => {:user => @user} %>
   </div>
   <div id="userarea" class="subcol2">
