--- a/app/views/share/_avatar.html.erb
+++ b/app/views/share/_avatar.html.erb
@@ -1,7 +1,7 @@
-<% if user %>
+<% if model %>
 <div id="avatar"> 
   <span>
-    <%= image_tag smallThumb(user) %>
+    <%= image_tag smallThumb(model) %>
   </span>
 </div>
 <% end %>
