--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -41,7 +41,7 @@
       <%# if @items_needed.size > 0 %>
         <h2><%= t("title.resources.#{@userSubtitle}Need", :user => @owner) %> (<%= @items_needed.size %>)</h2>
         <div class="block ui-corner-all">
-          <%= render :partial => "share/items_needed_offered", :locals => {:resources => @resources_needed, :itemTypes => @itemTypes, :need => 1 } %>
+          <%= render :partial => "share/items_needed_offered", :locals => {:resources => @items_needed, :itemTypes => @itemTypes, :need => true } %>
         </div> 
       <%# end %>
     </div>
@@ -50,7 +50,7 @@
       <%# if @items_offered.size > 0 %>
         <h2><%= t("title.resources.#{@userSubtitle}Have", :user => @owner) %> (<%= @items_offered.size %>)</h2>
         <div class="block ui-corner-all">
-          <%= render :partial => "share/items_needed_offered", :locals => {:resources => @resources_offered, :itemTypes => @itemTypes, :need => 0 } %>
+          <%= render :partial => "share/items_needed_offered", :locals => {:resources => @items_offered, :itemTypes => @itemTypes, :need => false } %>
         </div>
       <%# end %>
     </div>
@@ -62,7 +62,7 @@
       <%# if @items_taken.size > 0 %>
        <h2><%= t("title.resources.#{@userSubtitle}HaveTaken", :user => @owner) %> (<%= @items_taken.size %>)</h2>
         <div class="block ui-corner-all">
-          <%= render :partial => "share/items_given_taken", :locals => {:resources => @resources_taken, :itemTypes => @itemTypes, :taken => 1 } %>
+          <%= render :partial => "share/items_given_taken", :locals => {:resources => @items_taken, :itemTypes => @itemTypes, :taken => true } %>
         </div>
       <%# end %>
     </div>
@@ -71,7 +71,7 @@
       <%# if @items_given.size > 0 %>
         <h2><%= t("title.resources.#{@userSubtitle}HaveGiven", :user => @owner) %> (<%= @items_given.size %>)</h2>
         <div class="block ui-corner-all">
-          <%= render :partial => "share/items_given_taken", :locals => {:resources => @resources_given, :itemTypes => @itemTypes, :taken => 0 } %>
+          <%= render :partial => "share/items_given_taken", :locals => {:resources => @items_given, :itemTypes => @itemTypes, :taken => false } %>
         </div> 
       <%# end %>
     </div>
