--- a/app/views/share/_items_given_taken.html.erb
+++ b/app/views/share/_items_given_taken.html.erb
@@ -6,12 +6,18 @@
         else
           action = :given
         end
+				i = eval "resources.#{itemType.title.downcase}.#{action}"
       %>
       <% if params[:user_id] %>
-        <%= image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count =>  resources[itemType.title.downcase.to_sym][action].size ).html_safe %>
+        <%= image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe %>
       <% else %>
-        <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => resources[itemType.title.downcase.to_sym][action].size ).html_safe, 
-            items_path( "q[item_type_id_eq]" => itemType.id, "q[need_equals]" => need)
+        <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
+            items_path(
+							"q[item_type_id_eq]" => itemType.id, 
+							"q[accounts_accountable_id_eq]" => @itemable.id,
+							"q[accounts_accountable_type_eq]" => @itemable.class.to_s, 
+							"q[accounts_has_taken_eq]" => taken
+						)
         %>
       <% end %>
     </li>
