--- a/app/views/share/_items_needed_offered.html.erb
+++ b/app/views/share/_items_needed_offered.html.erb
@@ -7,25 +7,27 @@
         else
           action = :offered
         end
+				i = eval "resources.#{itemType.title.downcase}.#{action}"
       %>
-      <% count = resources[itemType.title.downcase.to_sym][action].size %>
-      <% if params[:user_id] %>
+      <% count = i.size %>
+      <% if @itemable %>
         <% if count.to_i == 1 %>
           <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe,
-             resources[itemType.title.downcase.to_sym][action].first 
+             i.first 
           %>  
         <% else %>
           <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe, 
-              user_items_path( @user, 
-                               "q[item_type_id_eq]" => itemType.id, 
-                               "q[need_eq]" => need, 
-                               "q[user_id_eq]" => @user.id )
+              items_path("q[item_type_id_eq]" => itemType.id, 
+                         "q[need_eq]" => need, 
+                         "q[itemable_id_eq]" => @itemable.id,
+                         "q[itemable_type_eq]" => @itemable.class.to_s
+						 )
           %>
         <% end %>
       <% else %>
         <% if count.to_i == 1 %>
           <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe,
-             resources[itemType.title.downcase.to_sym][action].first 
+             i.first 
           %>  
         <% else %>
           <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe, 
