items needed/offered/taken/given updated for pm

--- a/app/views/items/_orderBy.html.erb
+++ b/app/views/items/_orderBy.html.erb
@@ -16,7 +16,7 @@
   %>
   <%= render :partial => "share/search/sortlink", :locals => {
       :search => $search,
-      :field => 'location_city',
+      :field => 'location_address',
       :title => t("order.location"),
       :params => params
     }
