--- a/app/views/share/_items_needed_offered.html.erb
+++ b/app/views/share/_items_needed_offered.html.erb
@@ -3,37 +3,24 @@
 
     <li>
       <% if need == 1
-          action = :needed
+					i = eval "resources.#{itemType.title.downcase}.needed"
         else
-          action = :offered
+					i = eval "resources.#{itemType.title.downcase}.offered"
         end
-				i = eval "resources.#{itemType.title.downcase}.#{action}"
       %>
-      <% count = i.size %>
       <% if @itemable %>
-        <% if count.to_i == 1 %>
-          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe,
+        <% if i.size.to_i == 1 %>
+          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe,
              i.first 
           %>  
         <% else %>
-          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe, 
+          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
               items_path("q[item_type_id_eq]" => itemType.id, 
                          "q[need_eq]" => need, 
                          "q[itemable_id_eq]" => @itemable.id,
                          "q[itemable_type_eq]" => @itemable.class.to_s
 						 )
           %>
-        <% end %>
-      <% else %>
-        <% if count.to_i == 1 %>
-          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe,
-             i.first 
-          %>  
-        <% else %>
-          <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => count ).html_safe, 
-              items_path( "q[item_type_id_eq]" => itemType.id,
-                          "q[need_eq]" => need )
-          %>  
         <% end %>
       <% end %>
     </li>
