preparing groups for search by tags

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,7 +5,7 @@
       <%= render :partial => "share/images", :locals => {:images => @group.images} %>
       <% if @group.tags.size > 0 or not @group.description.empty? %>
         <div class="box ui-corner-all">
-          <%= render :partial => "share/tags", :locals => { :tags => @group.tags } %>
+          <%= render :partial => "share/tags", :locals => { :tags => @group.tags, :model => :groups } %>
           <p><%= markdown(@group.description) %></p>
           <%= render :partial => "share/item_attachments", :locals => { :object => @group } %>
         </div>
