--- a/app/views/share/search/_searchedItemType.html.erb
+++ b/app/views/share/search/_searchedItemType.html.erb
@@ -1,1 +1,1 @@
-<span><%= t((@searchItemType.downcase), :count => @items_count).html_safe %> <%= t("found") if !params[:user_id] %></span> 
+<span><%= t((@searchItemType.downcase), :count => count).html_safe %> <%= t("found") if !params[:user_id] %></span> 
