--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,6 @@
 <% if collection %>        
-  <div class="content-order-panel status-bar ui-corner-all font-smaller">
-    <% if @users_count > 0 %>
-      <span>
-        <%= t("user", :count => @users_count) %> <%= t("found") %>
-        <% if @tags || @tagtype %>
-          <%= render :partial => "share/panel_spacer" %>
-          <%= render :partial => "/share/search/tags", :locals => {:tags => @tags, :tagtype => @tagtype} %> 
-        <% end %>
-      </span>
-   <% end %>
-
-    <% if @usersearch  %>
-      <%= render :partial => "/share/panel_spacer" %>
-      <% if @tag || @tagtype %>
-          <%= render :partial => "orderByWithTag" %> 
-      <% else %>
-          <%= render :partial => "orderBy" %> 
-      <% end %>
-    <% end %>
-  </div>
+  
+	<%= render :partial => "share/search/panel", :locals => { :count => @users_count } %>
   
   <div class="center"><%= will_paginate collection %></div>
   <%= render :partial => "user", :collection => collection %>
