--- a/app/views/share/_items_given_taken.html.erb
+++ b/app/views/share/_items_given_taken.html.erb
@@ -9,7 +9,7 @@
 		      %>
 				<% else %>
 		      <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
-		          items_path(
+		          polymorphic_path([@itemable, :items],
 								"q[item_type_id_eq]" => itemType.id, 
 								"q[accounts_accountable_id_eq]" => @itemable.id,
 								"q[accounts_accountable_type_eq]" => @itemable.class.to_s, 
