items index view pm links updated

--- a/app/views/share/_items_needed_offered.html.erb
+++ b/app/views/share/_items_needed_offered.html.erb
@@ -1,25 +1,20 @@
 <ul class="item-collection">
   <% for itemType in itemTypes do %>
-
     <li>
-      <% if need == 1
-					i = eval "resources.#{itemType.title.downcase}.needed"
-        else
-					i = eval "resources.#{itemType.title.downcase}.offered"
-        end
-      %>
+      <% i = eval "resources.#{itemType.title.downcase}" %>
       <% if @itemable %>
         <% if i.size.to_i == 1 %>
-          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe,
-             i.first 
+          <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe,
+              i.first 
           %>  
         <% else %>
-          <%= link_to  image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
-              polymorphic_path([@itemable, :items], "q[item_type_id_eq]" => itemType.id, 
-                         "q[need_eq]" => need, 
-                         "q[itemable_id_eq]" => @itemable.id,
-                         "q[itemable_type_eq]" => @itemable.class.to_s
-						 )
+          <%= link_to image_tag(("icons/icon_" + itemType.title).downcase + ".png") + t( itemType.title.downcase, :count => i.size ).html_safe, 
+              polymorphic_path([@itemable, :items], 
+							 "q[item_type_id_eq]" => itemType.id, 
+							 "q[need_eq]" => need, 
+							 "q[itemable_id_eq]" => @itemable.id,
+							 "q[itemable_type_eq]" => @itemable.class.to_s
+							)
           %>
         <% end %>
       <% end %>
