--- a/app/views/groups/_orderBy.html.erb
+++ b/app/views/groups/_orderBy.html.erb
@@ -1,22 +1,22 @@
 <span>
   <%= t("sortBy") %> 
   <%= render :partial => "share/search/sortlink", :locals => {
-      :search => $search,
+      :search => @groupsearch,
       :field => 'title',
       :title => t("order.title"),
       :params => params
     }
   %>
   <%= render :partial => "share/search/sortlink", :locals => {
-      :search => $search,
+      :search => @groupsearch,
       :field => 'created_at',
       :title => t("order.date"),
       :params => params
     }
   %>
   <%= render :partial => "share/search/sortlink", :locals => {
-      :search => $search,
-      :field => 'location_address',
+      :search => @groupsearch,
+      :field => 'locations_address',
       :title => t("order.location"),
       :params => params
     }
