--- a/app/views/users/_orderBy.html.erb
+++ b/app/views/users/_orderBy.html.erb
@@ -9,7 +9,7 @@
   ,
   <%= render :partial => "share/search/sortlink", :locals => {
       :search => @usersearch,
-      :field => 'location_city',
+      :field => 'locations_address',
       :title => t("order.location")
     }
   %>
