--- a/app/views/groups/_orderBy.html.erb
+++ b/app/views/groups/_orderBy.html.erb
@@ -14,7 +14,7 @@
       :params => params
     }
   %>
-  <%= render :partial => "share/search/sortlink", :locals => {
+  <%# render :partial => "share/search/sortlink", :locals => {
       :search => @groupsearch,
       :field => 'locations_address',
       :title => t("order.location"),
