testing within-param on stage

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,6 +6,7 @@
   <% end %>
 <% end %>  
 
+<%= @location_city %> 
 <%= render :partial => "share/search/panel", :locals => { :count => @groups_count } %>
           
 <% if @groups and @groups.size > 0 %>
