--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,3 +1,4 @@
+<% if group %>
 <div class="list-item ui-corner-all">
   <%= render :partial => "share/list-item/usermenu", :locals => {:model => group} if logged_in? and group.owner == current_user %>
   <div class="item-members-count font-smaller">
@@ -20,3 +21,4 @@
 -->
     </div>
 </div>
+<% end %>
