--- a/app/views/pings/_form.html.erb
+++ b/app/views/pings/_form.html.erb
@@ -1,3 +1,31 @@
+<%= content_for :head do %>
+	<script type="text/javascript">
+		  $(document).ready(function (){  
+/*
+				$msg = '<%= @ping_body_msg %>';
+				$('#ping_body').attr('value', $msg);
+				$('#ping_body').click( function () {
+					$('#ping_body').attr('value', '');
+				});
+*/
+				$('#ping_body').each(function(){
+					var defaultVal = '<%= @ping_body_msg %>';
+					$(this).focus(function(){
+						if ($(this).val() == defaultVal){
+						  $(this).removeClass('default-active').val('');
+						}
+					})
+					.blur(function(){
+						if ($(this).val() == ''){
+						  $(this).addClass('default-active').val(defaultVal);
+						}
+					})
+					.blur().addClass('default-active');
+				});
+		  });
+		</script>
+<% end %>
+
 <%= form_for ([pingable, Ping.new]) do |f| %>
   <%= f.error_messages %>
   <%= f.hidden_field :pingable_id, :value => pingable.id %>
@@ -5,9 +33,9 @@
   <%= f.hidden_field :user_id, :value => current_user.id %>
   
   <p>
-    <%= f.text_area :body, :class => "ui-corner-all" %>
+    <%= f.text_area :body, :class => "ui-corner-all", :input_html => { :value => @ping_default_text } %>
   </p>
   <p>
-    <%= f.submit t("ping.this"), :class => "ui-corner-all" %>
+    <%= f.submit @ping_submit, :class => "ui-corner-all", :id => "ping_submit" %>
   </p>
 <% end %>
